Inclusão da classe login para validar os dados do formulário de login na index e redirecionar para a home com sessão do usuário iniciada. Link para logout com destruição da sessão. Verificação de login na home e redirecionamento para a index em caso de acesso sem login.

--- a/app.yaml
+++ b/app.yaml
@@ -18,6 +18,9 @@ handlers:
 #*********************************************************************************#
 # As classes (exemplo.class.php) não precisam ser declaradas aqui!
 # Home, destino após o login
+- url: /(.+)\.php
+  script: \1.php
+  
 - url: /pages/home.php
   script: pages/home.php
 # Página de teste
