Foram muitas inclusões. Em resumo, foram implementados a classe e os métodos necessários para tratar a criação, a limpeza e a reciclagem de espaços. Esses métodos estão associados ao botão 'Novo' na barra de pesquisa e ao botão sair de um espaço aberto, por isso também receberam alterações funcionais. Foi implementado o primeiro AJAX do projeto, para limpar o espaço ao fechá-lo, se for o útimo usuário.

--- a/app.yaml
+++ b/app.yaml
@@ -28,10 +28,19 @@ handlers:
 # Script para iniciar a sessão e tratar login/logout
 - url: /pages/loadSession.php
   script: pages/loadSession.php
-  # Script com a barra do usuário
+# Script com a barra do usuário
 - url: /pages/userBar.php
   script: pages/userBar.php
-# Página de teste
+# Script com o espaço ativo
+- url: /pages/space.php
+  script: pages/space.php
+# AJAX para fechar um espaço
+- url: /config/ajax/fecharEspaco.php
+  script: config/ajax/fecharEspaco.php
+# Página de teste *****###### TESTE
+- url: /pages/testeAjax.php
+  script: pages/testeAjax.php
+# Página de teste *****###### TESTE
 - url: /pages/teste.php
   script: pages/teste.php
 # Index
