Implementado o mecanismo básico tidpo ponte de formiga para busca de espaços na barra do usuário

--- a/app.yaml
+++ b/app.yaml
@@ -37,6 +37,9 @@ handlers:
 # AJAX para fechar um espaço
 - url: /config/ajax/fecharEspaco.php
   script: config/ajax/fecharEspaco.php
+  # AJAX para fazer a busca digitada na barra do usuário
+- url: /config/ajax/userBarSearch.php
+  script: config/ajax/userBarSearch.php
 # Página de teste *****###### TESTE
 - url: /pages/testeAjax.php
   script: pages/testeAjax.php
