Implementado o botão para listar todos os espaços abertos (ao lado do campo de busca) e todo o mecanismo para enviar/receber/descatar convites individuais entre usuários em um mesmo espaço. Muito CSS alterado e adicionado, mas nada definitivo.

--- a/app.yaml
+++ b/app.yaml
@@ -34,6 +34,9 @@ handlers:
 # Script com o espaço ativo
 - url: /pages/space.php
   script: pages/space.php
+  # Lista com os espçaos abertos no filtro selecionado (Por enquanto geral)
+- url: /pages/list.php
+  script: pages/list.php
 # Página intermediária para fazer signout do Fitebase ao perder a sessão
 - url: /pages/wayout.php
   script: pages/wayout.php
